--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -85,4 +85,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: waterfox-deb
-          path: waterfox_${{ github.sha.substr(0, 7) }}_amd64.deb
+          path: waterfox_${{ github.sha[0:7] }}_amd64.deb
