--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -81,8 +81,8 @@ jobs:
             --prefix /opt/waterfox \
             obj-*/dist/waterfox/
 
-      - name: Upload deb artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: waterfox-deb
-          path: waterfox_amd64.deb
+- name: Upload deb artifact
+  uses: actions/upload-artifact@v4
+  with:
+    name: ${{ steps.build_deb.outputs.deb_name }}
+    path: ${{ steps.build_deb.outputs.deb_name }}
